// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertToPostman any-auth 1`] = `
"{
    \\"info\\": {
        \\"name\\": \\"any-auth\\",
        \\"schema\\": \\"https://schema.getpostman.com/json/collection/v2.1.0/collection.json\\"
    },
    \\"variable\\": [
        {
            \\"key\\": \\"origin\\",
            \\"value\\": \\"http://localhost:8080\\",
            \\"type\\": \\"string\\"
        },
        {
            \\"key\\": \\"username\\",
            \\"value\\": \\"\\",
            \\"type\\": \\"string\\"
        },
        {
            \\"key\\": \\"password\\",
            \\"value\\": \\"\\",
            \\"type\\": \\"string\\"
        },
        {
            \\"key\\": \\"My-Header\\",
            \\"value\\": \\"\\",
            \\"type\\": \\"string\\"
        }
    ],
    \\"auth\\": {
        \\"basic\\": [
            {
                \\"key\\": \\"username\\",
                \\"value\\": \\"{{username}}\\",
                \\"type\\": \\"string\\"
            },
            {
                \\"key\\": \\"password\\",
                \\"value\\": \\"{{password}}\\",
                \\"type\\": \\"string\\"
            }
        ],
        \\"type\\": \\"basic\\"
    },
    \\"item\\": [
        {
            \\"name\\": \\"PostsService\\",
            \\"item\\": [
                {
                    \\"name\\": \\"createPost\\",
                    \\"request\\": {
                        \\"url\\": {
                            \\"raw\\": \\"{{origin}}/create\\",
                            \\"host\\": [
                                \\"{{origin}}\\"
                            ],
                            \\"path\\": [
                                \\"create\\"
                            ],
                            \\"query\\": []
                        },
                        \\"header\\": [
                            {
                                \\"key\\": \\"My-Header\\",
                                \\"value\\": \\"{{My-Header}}\\",
                                \\"type\\": \\"string\\"
                            }
                        ],
                        \\"method\\": \\"POST\\",
                        \\"body\\": {
                            \\"mode\\": \\"raw\\",
                            \\"raw\\": \\"{\\\\n    \\\\\\"id\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\"\\\\n}\\",
                            \\"options\\": {
                                \\"raw\\": {
                                    \\"language\\": \\"json\\"
                                }
                            }
                        }
                    },
                    \\"response\\": [
                        {
                            \\"name\\": \\"Successful createPost\\",
                            \\"code\\": 200,
                            \\"originalRequest\\": {
                                \\"url\\": {
                                    \\"raw\\": \\"{{origin}}/create\\",
                                    \\"host\\": [
                                        \\"{{origin}}\\"
                                    ],
                                    \\"path\\": [
                                        \\"create\\"
                                    ],
                                    \\"query\\": []
                                },
                                \\"header\\": [
                                    {
                                        \\"key\\": \\"My-Header\\",
                                        \\"value\\": \\"{{My-Header}}\\",
                                        \\"type\\": \\"string\\"
                                    }
                                ],
                                \\"method\\": \\"POST\\",
                                \\"body\\": {
                                    \\"mode\\": \\"raw\\",
                                    \\"raw\\": \\"{\\\\n    \\\\\\"id\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\"\\\\n}\\",
                                    \\"options\\": {
                                        \\"raw\\": {
                                            \\"language\\": \\"json\\"
                                        }
                                    }
                                }
                            },
                            \\"body\\": \\"\\\\\\"example\\\\\\"\\",
                            \\"_postman_previewlanguage\\": \\"json\\"
                        }
                    ]
                },
                {
                    \\"name\\": \\"getPost\\",
                    \\"request\\": {
                        \\"url\\": {
                            \\"raw\\": \\"{{origin}}/:postId\\",
                            \\"host\\": [
                                \\"{{origin}}\\"
                            ],
                            \\"path\\": [
                                \\":postId\\"
                            ],
                            \\"query\\": []
                        },
                        \\"header\\": [
                            {
                                \\"key\\": \\"My-Header\\",
                                \\"value\\": \\"{{My-Header}}\\",
                                \\"type\\": \\"string\\"
                            }
                        ],
                        \\"method\\": \\"GET\\"
                    },
                    \\"response\\": [
                        {
                            \\"name\\": \\"Successful getPost\\",
                            \\"code\\": 200,
                            \\"originalRequest\\": {
                                \\"url\\": {
                                    \\"raw\\": \\"{{origin}}/:postId\\",
                                    \\"host\\": [
                                        \\"{{origin}}\\"
                                    ],
                                    \\"path\\": [
                                        \\":postId\\"
                                    ],
                                    \\"query\\": []
                                },
                                \\"header\\": [
                                    {
                                        \\"key\\": \\"My-Header\\",
                                        \\"value\\": \\"{{My-Header}}\\",
                                        \\"type\\": \\"string\\"
                                    }
                                ],
                                \\"method\\": \\"GET\\"
                            },
                            \\"body\\": \\"{\\\\n    \\\\\\"id\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\"\\\\n}\\",
                            \\"_postman_previewlanguage\\": \\"json\\"
                        }
                    ]
                }
            ]
        }
    ]
}"
`;

exports[`convertToPostman test-api 1`] = `
"{
    \\"info\\": {
        \\"name\\": \\"blog-post-api\\",
        \\"schema\\": \\"https://schema.getpostman.com/json/collection/v2.1.0/collection.json\\"
    },
    \\"variable\\": [
        {
            \\"key\\": \\"origin\\",
            \\"value\\": \\"http://localhost:8080\\",
            \\"type\\": \\"string\\"
        }
    ],
    \\"item\\": [
        {
            \\"name\\": \\"PostsService\\",
            \\"item\\": [
                {
                    \\"name\\": \\"createPost\\",
                    \\"request\\": {
                        \\"description\\": \\"Creates a blog post and returns blog post id.\\",
                        \\"url\\": {
                            \\"raw\\": \\"{{origin}}/create\\",
                            \\"host\\": [
                                \\"{{origin}}\\"
                            ],
                            \\"path\\": [
                                \\"create\\"
                            ],
                            \\"query\\": []
                        },
                        \\"header\\": [
                            {
                                \\"key\\": \\"x-service-header\\",
                                \\"type\\": \\"text\\",
                                \\"value\\": \\"\\\\\\"example\\\\\\"\\"
                            },
                            {
                                \\"key\\": \\"x-endpoint-header\\",
                                \\"description\\": \\"I'm a header!\\",
                                \\"type\\": \\"text\\",
                                \\"value\\": \\"\\\\\\"example\\\\\\"\\"
                            }
                        ],
                        \\"method\\": \\"POST\\",
                        \\"body\\": {
                            \\"mode\\": \\"raw\\",
                            \\"raw\\": \\"{\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"author\\\\\\": {\\\\n        \\\\\\"type\\\\\\": \\\\\\"anonymous\\\\\\"\\\\n    },\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"postType\\\\\\": \\\\\\"LONG\\\\\\"\\\\n}\\",
                            \\"options\\": {
                                \\"raw\\": {
                                    \\"language\\": \\"json\\"
                                }
                            }
                        }
                    },
                    \\"response\\": [
                        {
                            \\"name\\": \\"Successful createPost\\",
                            \\"code\\": 200,
                            \\"originalRequest\\": {
                                \\"description\\": \\"Creates a blog post and returns blog post id.\\",
                                \\"url\\": {
                                    \\"raw\\": \\"{{origin}}/create\\",
                                    \\"host\\": [
                                        \\"{{origin}}\\"
                                    ],
                                    \\"path\\": [
                                        \\"create\\"
                                    ],
                                    \\"query\\": []
                                },
                                \\"header\\": [
                                    {
                                        \\"key\\": \\"x-service-header\\",
                                        \\"type\\": \\"text\\",
                                        \\"value\\": \\"\\\\\\"example\\\\\\"\\"
                                    },
                                    {
                                        \\"key\\": \\"x-endpoint-header\\",
                                        \\"description\\": \\"I'm a header!\\",
                                        \\"type\\": \\"text\\",
                                        \\"value\\": \\"\\\\\\"example\\\\\\"\\"
                                    }
                                ],
                                \\"method\\": \\"POST\\",
                                \\"body\\": {
                                    \\"mode\\": \\"raw\\",
                                    \\"raw\\": \\"{\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"author\\\\\\": {\\\\n        \\\\\\"type\\\\\\": \\\\\\"anonymous\\\\\\"\\\\n    },\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"postType\\\\\\": \\\\\\"LONG\\\\\\"\\\\n}\\",
                                    \\"options\\": {
                                        \\"raw\\": {
                                            \\"language\\": \\"json\\"
                                        }
                                    }
                                }
                            },
                            \\"body\\": \\"\\\\\\"example\\\\\\"\\",
                            \\"_postman_previewlanguage\\": \\"json\\"
                        }
                    ]
                },
                {
                    \\"name\\": \\"getPost\\",
                    \\"request\\": {
                        \\"description\\": \\"Gets a blog post.\\",
                        \\"url\\": {
                            \\"raw\\": \\"{{origin}}/:postId\\",
                            \\"host\\": [
                                \\"{{origin}}\\"
                            ],
                            \\"path\\": [
                                \\":postId\\"
                            ],
                            \\"query\\": []
                        },
                        \\"header\\": [
                            {
                                \\"key\\": \\"x-service-header\\",
                                \\"type\\": \\"text\\",
                                \\"value\\": \\"\\\\\\"example\\\\\\"\\"
                            }
                        ],
                        \\"method\\": \\"GET\\"
                    },
                    \\"response\\": [
                        {
                            \\"name\\": \\"Successful getPost\\",
                            \\"code\\": 200,
                            \\"originalRequest\\": {
                                \\"description\\": \\"Gets a blog post.\\",
                                \\"url\\": {
                                    \\"raw\\": \\"{{origin}}/:postId\\",
                                    \\"host\\": [
                                        \\"{{origin}}\\"
                                    ],
                                    \\"path\\": [
                                        \\":postId\\"
                                    ],
                                    \\"query\\": []
                                },
                                \\"header\\": [
                                    {
                                        \\"key\\": \\"x-service-header\\",
                                        \\"type\\": \\"text\\",
                                        \\"value\\": \\"\\\\\\"example\\\\\\"\\"
                                    }
                                ],
                                \\"method\\": \\"GET\\"
                            },
                            \\"body\\": \\"{\\\\n    \\\\\\"id\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"type\\\\\\": \\\\\\"LONG\\\\\\",\\\\n    \\\\\\"title\\\\\\": \\\\\\"example\\\\\\",\\\\n    \\\\\\"author\\\\\\": {\\\\n        \\\\\\"type\\\\\\": \\\\\\"anonymous\\\\\\"\\\\n    },\\\\n    \\\\\\"content\\\\\\": \\\\\\"example\\\\\\"\\\\n}\\",
                            \\"_postman_previewlanguage\\": \\"json\\"
                        }
                    ]
                }
            ]
        }
    ]
}"
`;
